Changes data organization, modifies visuals and copies

--- a/index.html
+++ b/index.html
@@ -2,50 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
-    <title>Simple Man</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.css" />
+    <title>Aghanim's Wrath</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <section class="hero is-info">
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title">
-            Simple Man
-          </h1>
-          <h2 class="subtitle">
-            I'm a simple man. I see skills upgradable by Aghanim's Scepter, I take skills upgradable by Aghanim's Scepter.
-          </h2>
-        </div>
-      </div>
-    </section>
     <div id="app"></div>
-    <footer class="footer">
-      <div class="container">
-        <div class="content has-text-centered">
-          <p>
-            <strong>Simple Man</strong> by <a href="https://github.com/denizarsan">Deniz Arsan</a>.
-          </p>
-          <p>
-            A tool that helps picking abilities in <strong>Ability Draft</strong> mode in <strong>Dota 2</strong>.
-            <br>
-            After selecting the available heroes in the pool, the tool displays abilities that are upgradable by <a href="http://dota2.gamepedia.com/Aghanim%27s_Scepter">Aghanim's Scepter</a>.
-          </p>
-          <p>
-            Made using <a href="https://vuejs.org/">Vue.js</a> and <a href="http://bulma.io/">Bulma</a>.
-          </p>
-          <p>
-            <a href="http://www.dota2.com">Dota 2</a> is a registered trademark of <a href="http://www.valvesoftware.com/">Valve Corporation</a>.
-          </p>
-          <p>
-            <a class="icon" href="https://github.com/denizarsan/simple-man">
-              <i class="fa fa-github"></i>
-            </a>
-          </p>
-        </div>
-      </div>
-    </footer>
     <!-- built files will be auto injected -->
   </body>
 </html>
